feat: Add AS5600 magnetic encoder support for HKUST nxt-dual-wl wheel loader
- Add AS5600 magnetic rotary position sensor driver
- Configure AS5600 for I2C Bus 1 on HKUST nxt-dual-wl board
- Set default parameters: SENS_EN_AS5600=1, AS5600_I2C_BUS=1
- Integrate AS5600 startup in sensor initialization scripts
- Add comprehensive documentation and testing guides
- Support 12-bit angular position sensing for wheel loader applications

Files added:
- AS5600 driver implementation (AS5600.cpp, AS5600.hpp)
- Driver main and parameters (as5600_main.cpp, as5600_params.c)
- uORB message definitions (SensorAs5600.msg, SensorMagEncoder.msg)
- Board-specific configuration and documentation
- Testing commands and troubleshooting guide

Hardware support:
- I2C interface on HKUST nxt-dual-wl board
- 360 rotation sensing with 0.087 accuracy
- Magnetic sensing immune to dust/dirt for wheel loader environment

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -198,6 +198,7 @@ set(msg_files
 	SensorGyroFifo.msg
 	SensorHygrometer.msg
 	SensorMag.msg
+	SensorMagEncoder.msg
 	SensorOpticalFlow.msg
 	SensorPreflightMag.msg
 	SensorSelection.msg
