Integrate H-Bridge driver and standardize quad encoder naming
H-Bridge Driver Integration:
- Add DRV8701 H-Bridge driver to nxt-dual-wl board configuration
- Implement complete H-Bridge driver with PX4 module structure
- Create uORB message definitions (HbridgeCmd, HbridgeStatus, HbridgeSystem)
- Fix parameter syntax, type mismatches, and MODULE_NAME conflicts
- Update CMakeLists.txt dependencies to use arch_io_pins

Quad Encoder Naming Standardization:
- Rename all files from quadencoder_* to quad_encoder_*
- Update struct, function, and constant names throughout codebase
- Standardize Kconfig naming convention
- Update include paths to use PX4 style includes
- Maintain backward compatibility for board configurations

Build System Updates:
- Register new uORB messages in build system
- Update board configuration with H-Bridge driver support
- Verify successful compilation of all changes

Testing: Both drivers integrated and project builds successfully

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -111,6 +111,9 @@ set(msg_files
 	GpsDump.msg
 	GpsInjectData.msg
 	Gripper.msg
+	HbridgeCmd.msg
+	HbridgeStatus.msg
+	HbridgeSystem.msg
 	HealthReport.msg
 	HeaterStatus.msg
 	HoverThrustEstimate.msg
