feat(board/nxt-dual-wl): implement GPIO-based quadrature encoder framework
Implement a comprehensive GPIO-based quadrature encoder framework for the
HKUST NXT dual wheel loader board, replacing timer-based implementation
to support wheel odometry and speed monitoring.

Key Features:
- Pure GPIO software decoding (eliminates STM32H7 timer compatibility issues)
- x1 and x4 quadrature counting modes with Gray code state machine
- Index pulse support for encoder calibration
- Velocity calculation in RPM and m/s
- Comprehensive error detection and status reporting
- Configurable direction inversion for left/right wheel mounting

Hardware Configuration:
- 5 encoder interfaces (4 wheels + 1 auxiliary)
- GPIO pin assignments for all wheel positions (FL, FR, RL, RR)
- Support for 1024 CPR encoders with index pulses
- Interrupt-driven quadrature decoding for real-time performance

Implementation:
- nxt_qencoder.[ch]: Core GPIO encoder driver with NuttX qencoder interface
- board_qencoder.[ch]: Board-specific configuration and initialization
- board_config.h: Enable QENCODER support flags
- init.c: Initialize encoders during board startup
- defconfig: Enable SENSORS_QENCODER in NuttX configuration
- CMakeLists.txt: Include encoder source files in build

Applications:
- Vehicle odometry using differential drive kinematics
- Wheel speed monitoring for traction control
- Position feedback for autonomous navigation
- Example code for encoder usage patterns

The framework provides a robust foundation for wheel loader applications
requiring precise position and velocity feedback from wheel encoders.

--- a/boards/hkust/nxt-dual-wl/src/CMakeLists.txt
+++ b/boards/hkust/nxt-dual-wl/src/CMakeLists.txt
@@ -53,6 +53,9 @@ else()
 		timer_config.cpp
 		usb.c
 		mtd.cpp
+		nxt_qencoder.c
+		board_qencoder.c
+		#encoder_example.c
 	)
 	# add_dependencies(drivers_board arch_board_hw_info)
 
