Convert PX4 quad encoder driver to generic encoder system
This commit converts the wheel-specific quad encoder driver to a generic
encoder system supporting both rotary and linear encoders with multi-instance
capability and proper scaling.

Changes include:

Message System:
- Renamed QuadEncoders.msg to SensorQuadEncoder.msg
- Added encoder type support (TYPE_ROTARY=0, TYPE_LINEAR=1)
- Added unified velocity and distance/angle fields
- Added gear ratio and configuration fields for proper scaling
- Support for up to 8 encoders with validity flags

High-Level PX4 Driver (src/drivers/quad_encoder/):
- New QuadEncoder.hpp/.cpp implementing generic encoder support
- Added parameters for encoder types (QE_TYPE_0-3) and gear ratios (QE_GEAR_RATIO_0-3)
- Dual calculation paths: rotary (rad/s, radians) vs linear (m/s, meters)
- Enhanced parameter system with type discrimination and scaling
- IOCTL-based communication with low-level NuttX driver
- Optional odometry calculation for wheel applications
- Comprehensive status reporting and error handling

Low-Level NuttX Driver Enhancement:
- Extended nxt_qencoder.c with multi-instance support (up to 8 encoders)
- Added semaphore-protected instance management for thread safety
- Implemented proper NuttX QEIOC interface (POSITION, RESET, etc.)
- Added velocity calculation and configuration management
- Enhanced GPIO-based encoder support with index signals

Board Configuration:
- Updated default.px4board to include quad_encoder module
- Added encoder initialization to rc.board_sensors
- Configured board-specific encoder mappings

Key Features:
- Supports both rotary encoders (wheels, motors) and linear actuators
- Configurable gear ratios and screw pitches for proper unit conversion
- Multi-instance support with up to 8 encoders
- Thread-safe operation with semaphore protection
- Consistent interface between high-level and low-level drivers
- Backward compatibility with existing wheel applications
- Optional odometry publishing fo

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -238,6 +238,7 @@ set(msg_files
 	VehicleTorqueSetpoint.msg
 	VelocityLimits.msg
 	WheelEncoders.msg
+	SensorQuadEncoder.msg
 	Wind.msg
 	YawEstimatorStatus.msg
 	versioned/ActuatorMotors.msg
