Add ST3125 smart servo driver with velocity control support
- Implement ST3125Servo driver for serial communication with ST3125 smart servos
- Add position control, velocity control, and feedback monitoring
- Support for multi-servo synchronization and error detection
- Add RoboticServoCommand and ServoFeedback message definitions
- Enable ST3125 servo driver in hkust_nxt-dual-wl board configuration
- Fix missing set_velocity function implementation for successful compilation

Features:
- Serial protocol communication (similar to Dynamixel)
- Position and velocity control
- Current, voltage, and temperature monitoring
- Configurable baudrate and update rate
- Error detection and recovery
- Multi-servo support with ID scanning

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -239,6 +239,8 @@ set(msg_files
 	VelocityLimits.msg
 	WheelEncoders.msg
 	SensorQuadEncoder.msg
+	ServoFeedback.msg
+	RoboticServoCommand.msg
 	Wind.msg
 	YawEstimatorStatus.msg
 	versioned/ActuatorMotors.msg
