build: Update build system and add project documentation
- Update msg/CMakeLists.txt to include new uORB messages
- Update src/lib/CMakeLists.txt to include distributed uORB library
- Add design documentation for distributed uORB architecture
- Add Kconfig files for boom and bucket control modules

Changes:
- Build system now includes all new messages and libraries
- Design documents explain the distributed messaging architecture
- Configuration files prepared for future hydraulic modules

This completes the build system integration for the wheel loader project.

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -47,6 +47,10 @@ set(msg_files
 	Airspeed.msg
 	AirspeedWind.msg
 	AutotuneAttitudeControlStatus.msg
+	BoomCommand.msg
+	BoomStatus.msg
+	BucketCommand.msg
+	BucketStatus.msg
 	ButtonEvent.msg
 	CameraCapture.msg
 	CameraStatus.msg
@@ -238,6 +242,15 @@ set(msg_files
 	VehicleTorqueSetpoint.msg
 	VelocityLimits.msg
 	WheelEncoders.msg
+	WheelSpeedsSetpoint.msg
+	SteeringSetpoint.msg
+	SteeringStatus.msg
+	SlipEstimation.msg
+	TractionControl.msg
+	PredictiveTraction.msg
+	LoadAwareTorque.msg
+	TerrainAdaptation.msg
+	ModuleStatus.msg
 	SensorQuadEncoder.msg
 	ServoFeedback.msg
 	RoboticServoCommand.msg
