--- a/platforms/nuttx/src/px4/stm/stm32_common/qencoder/CMakeLists.txt
+++ b/platforms/nuttx/src/px4/stm/stm32_common/qencoder/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2019 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2025 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -31,9 +31,6 @@
 #
 ############################################################################
 
-
-add_subdirectory(board_critmon)
-add_subdirectory(../stm32_common/board_reset board_reset)
-add_subdirectory(../stm32_common/version version)
-add_subdirectory(../stm32_common/hrt hrt)
-add_subdirectory(../stm32_common/qencoder qencoder)
+px4_add_library(arch_qencoder
+	nuttx_qencoder.c
+)
