--- a/platforms/nuttx/src/px4/stm/stm32f4/CMakeLists.txt
+++ b/platforms/nuttx/src/px4/stm/stm32f4/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(../stm32_common/board_reset board_reset)
 add_subdirectory(../stm32_common/dshot dshot)
 add_subdirectory(../stm32_common/hrt hrt)
 add_subdirectory(../stm32_common/led_pwm led_pwm)
+add_subdirectory(../stm32_common/qencoder qencoder)
 add_subdirectory(../stm32_common/srgbled_dma srgbled_dma)
 add_subdirectory(../stm32_common/io_pins io_pins)
 add_subdirectory(../stm32_common/spi spi)
