Fix sensor message types to use generic names instead of product models
- Replace 'sensor_as5600' with 'sensor_mag_encoder' for magnetic rotary encoders
- Remove AS5600 dependency from steering controller (ST3125 servo provides internal feedback)
- Update boom control to use generic magnetic encoder message type
- Add hardware parameter definitions for wheel controller
- Correct sensor/actuator mapping documentation to use proper generic message types
- Update parameter names from AS5600-specific to generic magnetic encoder

This improves code maintainability by using sensor type names rather than
specific hardware product model names in the message system.

--- a/src/modules/articulated_chassis/wheel_controller/module.yaml
+++ b/src/modules/articulated_chassis/wheel_controller/module.yaml
@@ -1,4 +1,28 @@
 module_name: Wheel Controller
+
+parameters:
+    - group: Wheel Controller Hardware
+      definitions:
+        WC_HBRIDGE_CH:
+            description:
+                short: H-bridge channel for wheel motor
+                long: DRV8701 H-bridge channel (0 or 1) used for the wheel drive motor.
+            type: int32
+            min: 0
+            max: 1
+            default: 0
+            reboot_required: true
+
+        WC_ENC_INST:
+            description:
+                short: Wheel encoder instance
+                long: Quad encoder instance for wheel speed measurement.
+            type: int32
+            min: 0
+            max: 3
+            default: 0
+            reboot_required: true
+
 serial_config:
     - command: wheel_controller start -i 0 -f  # Front wheel
       port_config_param:
