refactor: reorganize drivers and implement AHRS-enhanced bucket control
Major changes:
- Move hbridge_drv8701 from src/drivers/actuators/ to src/drivers/
- Move limit_sensor from src/modules/ to src/drivers/
- Update include file order for all drivers to follow PX4 standards
- Implement comprehensive AHRS integration in bucket control
- Add auto-leveling, slope compensation, and stability control features
- Update parameter definitions and synchronize driver configurations
- Fix build configurations for moved modules
- Enhance wheel loader control with terrain-aware capabilities

Driver reorganization:
- Relocated hbridge_drv8701 and limit_sensor to appropriate driver locations
- Updated Kconfig and build configurations
- Fixed parameter naming and type consistency

AHRS integration:
- Added 9 new AHRS parameters for advanced control modes
- Implemented auto-leveling, grading, and anti-spill control
- Enhanced bucket control with ground-relative angle calculations
- Added stability monitoring and dynamic movement limiting

Message updates:
- Enhanced BucketCommand with AHRS control fields
- Added HbridgeChannelCmd message for improved H-bridge control
- Updated HbridgeChannel and HbridgeSystem messages

Include file standardization:
- Organized includes following PX4 conventions for all drivers
- Separated system, px4_platform, lib, uORB, and local includes

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -115,8 +115,8 @@ set(msg_files
 	GpsDump.msg
 	GpsInjectData.msg
 	Gripper.msg
-	HbridgeCmd.msg
-	HbridgeStatus.msg
+	HbridgeChannel.msg
+	HbridgeChannelCmd.msg
 	HbridgeSystem.msg
 	HealthReport.msg
 	HeaterStatus.msg
