--- a/src/drivers/limit_sensor/CMakeLists.txt
+++ b/src/drivers/limit_sensor/CMakeLists.txt
@@ -1,12 +1,11 @@
 px4_add_module(
-    MODULE modules__limit_sensor
+    MODULE drivers__limit_sensor
     MAIN limit_sensor
     COMPILE_FLAGS
     SRCS
         LimitSensor.cpp
         LimitSensor.hpp
     DEPENDS
-        parameters
         perf
         px4_work_queue
 )
