--- a/src/drivers/limit_sensor/Kconfig
+++ b/src/drivers/limit_sensor/Kconfig
@@ -1,8 +1,8 @@
-menuconfig MODULES_LIMIT_SENSOR
+menuconfig DRIVERS_LIMIT_SENSOR
 	bool "limit_sensor"
 	default n
 	---help---
-		Enable support for Limit Sensor module.
+		Enable support for Limit Sensor driver.
 
 		This module provides GPIO-based limit switch monitoring for
 		hydraulic components with support for up to 8 sensor instances,
