Rename hbridge_drv8701 driver to h_bridge
- Renamed directory from src/drivers/hbridge_drv8701 to src/drivers/h_bridge
- Renamed main files: hbridge_drv8701_main.cpp -> h_bridge_main.cpp, hbridge_drv8701_params.c -> h_bridge_params.c
- Updated CMakeLists.txt: MODULE drivers__hbridge_drv8701 -> drivers__h_bridge, MAIN hbridge_drv8701 -> h_bridge
- Updated function name: hbridge_drv8701_main -> h_bridge_main
- Updated usage examples and module name in help text
- Updated Kconfig: DRIVERS_HBRIDGE_DRV8701 -> DRIVERS_H_BRIDGE
- Updated module.yaml command: hbridge_drv8701 start -> h_bridge start
- Updated board configurations in all three target boards to use CONFIG_DRIVERS_H_BRIDGE=y
- All references to hbridge_drv8701 have been successfully renamed to h_bridge

--- a/src/drivers/h_bridge/CMakeLists.txt
+++ b/src/drivers/h_bridge/CMakeLists.txt
@@ -32,18 +32,18 @@
 ############################################################################
 
 px4_add_module(
-	MODULE drivers__hbridge_drv8701
-	MAIN hbridge_drv8701
+	MODULE drivers__h_bridge
+	MAIN h_bridge
 	COMPILE_FLAGS
 	SRCS
-		hbridge_drv8701_main.cpp
+		h_bridge_main.cpp
 		HBridgeDriver.cpp
 		EnableManager.cpp
 	DEPENDS
 		px4_work_queue
 	)
 
-target_link_libraries(drivers__hbridge_drv8701
+target_link_libraries(drivers__h_bridge
 	PRIVATE
 		px4_layer
 		arch_io_pins
