--- a/src/drivers/h_bridge/Kconfig
+++ b/src/drivers/h_bridge/Kconfig
@@ -1,5 +1,5 @@
-menuconfig DRIVERS_HBRIDGE_DRV8701
-	bool "hbridge_drv8701"
+menuconfig DRIVERS_H_BRIDGE
+	bool "h_bridge"
 	default n
 	---help---
 		Enable support for DRV8701 H-Bridge motor driver
