Update bucket control to use motion planning library
- Replace lib/trajectory with lib/motion_planning components
- Use VelocitySmoothing and PositionSmoothing for smooth trajectories
- Update API calls to use proper motion planning methods
- Replace custom S-curve implementation with motion planning library
- Update PID controller API to use individual setters
- Improve trajectory generation for smoother bucket control

This change provides more sophisticated motion planning with better
constraint handling for jerk, acceleration, and velocity limits.

--- a/boards/hkust/nxt-dual-wl-front/src/CMakeLists.txt
+++ b/boards/hkust/nxt-dual-wl-front/src/CMakeLists.txt
@@ -54,6 +54,7 @@ else()
 		usb.c
 		mtd.cpp
 		board_qencoder.c
+		board_limit_sensor_config.cpp
 		#encoder_example.c
 	)
 	# add_dependencies(drivers_board arch_board_hw_info)
