--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -115,9 +115,8 @@ set(msg_files
 	GpsDump.msg
 	GpsInjectData.msg
 	Gripper.msg
-	HbridgeChannel.msg
-	HbridgeChannelCmd.msg
-	HbridgeSystem.msg
+	HbridgeCommand.msg
+	HbridgeStatus.msg
 	HealthReport.msg
 	HeaterStatus.msg
 	HoverThrustEstimate.msg
@@ -132,6 +131,7 @@ set(msg_files
 	LandingTargetPose.msg
 	LaunchDetectionStatus.msg
 	LedControl.msg
+	LimitSensor.msg
 	LoggerStatus.msg
 	LogMessage.msg
 	MagnetometerBiasEstimate.msg
