--- a/src/drivers/hbridge/CMakeLists.txt
+++ b/src/drivers/hbridge/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2024 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2025 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -32,20 +32,13 @@
 ############################################################################
 
 px4_add_module(
-	MODULE drivers__h_bridge
-	MAIN h_bridge
+	MODULE drivers__hbridge
+	MAIN hbridge
 	COMPILE_FLAGS
+		-Wno-cast-align # TODO: fix and enable
 	SRCS
-		h_bridge_main.cpp
-		HBridgeDriver.cpp
-		EnableManager.cpp
+		HBridge.cpp
 	DEPENDS
-		px4_work_queue
+		drivers_pwm_out
+		px4_platform
 	)
-
-target_link_libraries(drivers__h_bridge
-	PRIVATE
-		px4_layer
-		arch_io_pins
-		circuit_breaker
-)
