Fix compilation errors across multiple modules
- Fixed boom control module compilation:
  * Updated PositionSmoothing API calls to use Z-axis methods
  * Fixed PID API calls and parameter initialization
  * Corrected uORB message field names for hbridge_status and hbridge_command
  * Fixed switch statement syntax and added missing trajectory variables
  * Fixed publish_boom_status to use correct BoomStatus message fields

- Fixed bucket control module compilation:
  * Updated PID API usage and motion planning integration
  * Fixed encoder data access from wheel_encoders_s to sensor_quad_encoder_s
  * Added proper Vector3f namespace and includes

- Fixed board configuration issues:
  * Added CONFIG_MODULES_BUCKET_CONTROL, CONFIG_MODULES_CONTROL_ALLOCATOR, CONFIG_MODULES_NAVIGATOR
  * Fixed board CMakeLists.txt to use proper drivers_board library pattern
  * Added missing headers and fixed format specifiers in board_qencoder files
  * Fixed signed/unsigned comparison warnings

- Fixed CUAV x7plus-wl board:
  * Updated CMakeLists.txt to use correct build pattern
  * Added control allocator module to configuration

- Added dataman CONFIG fallback for missing mission items configuration

- Fixed parameter validation errors in boom control parameters

This commit resolves major compilation errors and brings the build from ~214/870 tasks
to successful compilation of most modules, with remaining issues being linker errors
for missing library implementations.

--- a/boards/cuav/x7plus-wl/src/CMakeLists.txt
+++ b/boards/cuav/x7plus-wl/src/CMakeLists.txt
@@ -31,8 +31,21 @@
 #
 ############################################################################
 
-target_sources(px4
-	PRIVATE
+if("${PX4_BOARD_LABEL}" STREQUAL  "bootloader")
+	add_library(drivers_board
+		bootloader_main.c
+		usb.c
+	)
+	target_link_libraries(drivers_board
+		PRIVATE
+			nuttx_arch
+			nuttx_drivers
+			bootloader
+	)
+	target_include_directories(drivers_board PRIVATE ${PX4_SOURCE_DIR}/platforms/nuttx/src/bootloader/common)
+
+else()
+	add_library(drivers_board
 		board_config.h
 		hw_config.h
 		init.c
@@ -41,4 +54,17 @@ target_sources(px4
 		i2c.cpp
 		usb.c
 		timer_config.cpp
-)
+	)
+	add_dependencies(drivers_board arch_board_hw_info)
+
+	target_link_libraries(drivers_board
+		PRIVATE
+			arch_io_pins
+			arch_spi
+			arch_board_hw_info
+			drivers__led
+			nuttx_arch
+			nuttx_drivers
+			px4_layer
+	)
+endif()
