feat: implement and configure qencoder system for both front and rear boards
This commit implements a comprehensive quadrature encoder system for the NXT dual wheel loader project:

### Key Components Added:
- **NuttX QEncoder Driver**: Complete implementation in
  - Support for GPIO-based quadrature encoder reading
  - Instance management for multiple encoders
  - Velocity calculation and status monitoring
  - Standard NuttX character device interface

### Front Board Configuration:
- Added 2 encoder support (QENCODER1, QENCODER2)
- Updated board configuration and CMakeLists.txt
- Added arch_qencoder dependency
- Converted to C++ implementation for consistency

### Rear Board Configuration:
- Added 1 encoder support (QENCODER)
- Similar configuration updates as front board
- Proper GPIO pin mappings (PC6/PC7)
- Clean board configuration with required modules

### Build System Updates:
- Added arch_qencoder library to platform builds
- Proper include path resolution with px4_arch headers
- CMakeLists.txt updates for both boards
- Board configuration files (.px4board) updated

### Code Quality Improvements:
- Fixed header include paths to use relative includes
- Added proper __EXPORT declarations
- Consistent C++ implementation across boards
- Proper error handling and logging

### Files Modified/Added:
-  (new)
-  (new)
-  (new)
-  (new)
- Board configuration and CMakeLists.txt files updated

The implementation provides a solid foundation for quadrature encoder integration
in the wheel loader control system, with proper abstraction and multiple board support.

--- a/boards/hkust/nxt-dual-wl-front/src/CMakeLists.txt
+++ b/boards/hkust/nxt-dual-wl-front/src/CMakeLists.txt
@@ -53,9 +53,8 @@ else()
 		timer_config.cpp
 		usb.c
 		mtd.cpp
-		board_qencoder.c
+		board_qencoder.cpp
 		board_limit_sensor_config.cpp
-		#encoder_example.c
 	)
 	# add_dependencies(drivers_board arch_board_hw_info)
 
@@ -64,9 +63,11 @@ else()
 			arch_io_pins
 			arch_spi
 			arch_board_hw_info
+			arch_qencoder
 			drivers__led
 			nuttx_arch
 			nuttx_drivers
 			px4_layer
 	)
+
 endif()
