--- a/platforms/nuttx/src/px4/stm/stm32_common/qencoder/CMakeLists.txt
+++ b/platforms/nuttx/src/px4/stm/stm32_common/qencoder/CMakeLists.txt
@@ -34,3 +34,7 @@
 px4_add_library(arch_qencoder
 	nuttx_qencoder.c
 )
+
+target_compile_options(arch_qencoder PRIVATE ${MAX_CUSTOM_OPT_LEVEL})
+
+target_link_libraries(arch_qencoder PRIVATE drivers_board) # timer_io_channels
