Fix PX4 parameter and build configuration issues
- Fix invalid @instance documentation tags in wheel_controller_params.c
- Add support for 'bool' parameter type in generate_params.py
- Remove problematic module.yaml files causing missing mixer errors
- Update board configurations to remove conflicting modules
- Clean up CMakeLists.txt files to remove invalid dependencies
- Standardize parameter naming and fix documentation
- Remove deprecated serial config and module configurations

This resolves parameter generation errors, actuator.json build issues,
and module configuration conflicts in the wheel loader project.

--- a/src/modules/articulated_chassis/wheel_controller/CMakeLists.txt
+++ b/src/modules/articulated_chassis/wheel_controller/CMakeLists.txt
@@ -6,9 +6,7 @@ px4_add_module(
     SRCS
         wheel_controller.cpp
         wheel_controller_main.cpp
-    MODULE_CONFIG
-        module.yaml
     DEPENDS
         px4_work_queue
-        pid
+        PID
 )
